push code exercice

--- a/imports/ui/App.html
+++ b/imports/ui/App.html
@@ -17,7 +17,7 @@
             <button
                 type="button"
                 id="export-button"
-            >Start new export</button>
+            >Export</button>
         </div>
 
         <ul class="exports">
